Feature #4142 : adding password services (including password rule management). - wiring change password with the new Silverpeas JQuery Plugin - updating some copyrights - adjusting the UI rendering and associated behaviors

--- a/war-core/src/main/webapp/util/styleSheets/silverpeas-password.css
+++ b/war-core/src/main/webapp/util/styleSheets/silverpeas-password.css
@@ -30,11 +30,11 @@
 .password-box-info {
   position: absolute;
   padding: 15px;
-  background: #f5f5f5;
   border-radius: 5px;
   box-shadow: 0 1px 3px #ccc;
-  border: 1px solid #ddd;
+  border: 1px solid #F9E98E;
   text-align: left;
+  background-color: #FBF7AA;
 }
 
 .password-box-info::before {
@@ -44,7 +44,7 @@
   left: 45%;
   font-size: 14px;
   line-height: 14px;
-  color: #ddd;
+  color: #F9E98E;
   text-shadow: none;
   display: block;
 }
@@ -65,8 +65,8 @@
 
 .password-box-info .combined {
   padding-left: 37px;
-  line-height: 18px;
-  color: #a0a0a0;
+  line-height: 16px;
+  color: #000000;
 }
 
 .password-box-info .info {
@@ -86,14 +86,21 @@
 .password-box-info .combined.success {
   background: none;
   padding-left: 37px;
-  line-height: 18px;
-  color: #000000;
+  line-height: 16px;
+  color: #3a7d34;
 }
 
 .password-box-info .error {
   background: url(../icons/rule/error.png) no-repeat 0 50%;
   padding-left: 22px;
   line-height: 24px;
+  color: #ec3f41;
+}
+
+.password-box-info .combined.error {
+  background: none;
+  padding-left: 37px;
+  line-height: 16px;
   color: #ec3f41;
 }
 
