--- a/war-core/src/main/webapp/style.css
+++ b/war-core/src/main/webapp/style.css
@@ -1,5 +1,5 @@
-/**
- * Copyright (C) 2000 - 2012 Silverpeas
+/*
+ * Copyright (C) 2000 - 2013 Silverpeas
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Affero General Public License as
@@ -9,7 +9,7 @@
  * As a special exception to the terms and conditions of version 3.0 of
  * the GPL, you may redistribute this Program in connection with Free/Libre
  * Open Source Software ("FLOSS") applications as described in Silverpeas's
- * FLOSS exception.  You should have received a copy of the text describing
+ * FLOSS exception.  You should have recieved a copy of the text describing
  * the FLOSS exception, and it is also available here:
  * "http://www.silverpeas.org/docs/core/legal/floss_exception.html"
  *
@@ -189,6 +189,16 @@ p label span {
 .changePwd {
 	font-size: 10px;
 	color:#999999;
+}
+
+.passwordRules {
+  font-size: 10px;
+  color: #999999;
+}
+
+.passwordRules a {
+  font-size: 10px;
+  color: #999999;
 }
 
 #storePassword{
