closing feature #3689 by adding second part of the feature Displaying a help message which is managed by a cookie However, this message can be displayed at any time when clicking on the 'Help' link This message can be customized with the help of StringTemplate

--- a/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
+++ b/war-core/src/main/webapp/util/styleSheets/globalSP_SilverpeasV5.css
@@ -2680,6 +2680,11 @@ caption {
   margin-right: 5px;
 }
 
+#directory #indexAndSearch #search #help {
+  line-height: 20px;
+  margin-left: 5px;
+}
+
 #directory #indexAndSearch .gaucheBoutonV5 , #directory #indexAndSearch .droiteBoutonV5{
   display:none;
 }
