Fix some CSS issues with the web site

--- a/src/site/resources/css/site.css
+++ b/src/site/resources/css/site.css
@@ -237,7 +237,7 @@ pre.prettyprint {
 	width:auto;
 }
 
-#poweredBy {
+p#poweredBy {
 	background-color: #F5F5F5;
 	border: 1px solid #E3E3E3;
 	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;
@@ -247,5 +247,3 @@ pre.prettyprint {
 	position: absolute;
 	top: 300px;
 }
-
-
