Feature #3447 : File Upload Plugin - adding jQuery file upload plugin - adding view generator tag that handles the use of the jQuery file upload plugin - adding manager to retrieve uploaded files on server side

--- a/war-core/src/main/webapp/util/styleSheets/fieldset.css
+++ b/war-core/src/main/webapp/util/styleSheets/fieldset.css
@@ -43,6 +43,7 @@ fieldset.skinFieldset {
 	border-radius:10px;
 	min-height:80px;
 	display:block;
+	background-color:#F4F4F4;
 	background: -webkit-gradient(linear, left top, right top, from(#fff), to(#e5e5e5));
 	background: -moz-linear-gradient(left, #fff, #e5e5e5);
 	/* For Internet Explorer 5.5 - 7 */
